[tool.poetry]
package-mode = false
name = "service.session-checker"
version = "0.2.0"
description = "TOASTER bot service."
repository = "https://github.com/FUNCKA-TOASTER/service.session-checker"
documentation = "https://github.com/FUNCKA-TOASTER/TOASTER/wiki"
authors = [
    "Oidaho <oidahomain@gmail.com>"
]
license = "GPL-3.0-only"
readme = "README.md"
packages = []


[tool.poetry.dependencies]
python = "^3.10"
vk-api = "^11.9.9"
toaster = {git = "https://github.com/FUNCKA-TOASTER/package.toaster", branch="main"}
toaster_utils = {git = "https://github.com/FUNCKA-TOASTER/package.toaster-utils", branch="main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
